button text overflow fix
button text overflow fix

--- a/webplugin/css/app/km-rich-message.css
+++ b/webplugin/css/app/km-rich-message.css
@@ -1235,6 +1235,8 @@
     font-size: 14px;
     border: 1px solid;
     background-color: white;
+    word-break: break-word;
+    text-align: left;
 }
 .km-cta-multi-button-container button.km-cta-button {
     font-size: 14px;
